<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_Mscreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@color/blue_hall">

        <ImageView
            android:onClick="ClickClose"
            android:layout_marginTop="5dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_gravity="end"/>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:onClick="ClickLogo"
            android:src="@drawable/logo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:elevation="0dp"
            android:background="@color/purple_more"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="ClickHome">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:padding="25dp"
            android:fontFamily="@font/laton"
            android:textColor="@color/white_carbon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_home_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:onClick="ClickMapa">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map"
            android:padding="25dp"
            android:fontFamily="@font/laton"
            android:textColor="@color/white_carbon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_gamepad_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:onClick="ClickEventos">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/events"
            android:padding="25dp"
            android:fontFamily="@font/laton"
            android:textColor="@color/white_carbon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_calendar_month_24"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:onClick="ClickNotificacao">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/notification"
            android:padding="25dp"
            android:fontFamily="@font/laton"
            android:textColor="@color/white_carbon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_notifications_none_24"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:elevation="0dp"
        android:background="@color/white_carbon"/>

    <LinearLayout
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:onClick="ClickCompartilhar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:padding="25dp"
            android:fontFamily="@font/laton"
            android:textColor="@color/white_carbon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_share_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:onClick="ClickComprar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy"
            android:padding="25dp"
            android:fontFamily="@font/laton"
            android:textColor="@color/white_carbon"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_shopping_cart_24"/>

    </LinearLayout>

</LinearLayout>