<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sr"
        android:scaleType="centerCrop"
        tools:ignore="MissingConstraints"/>

    <View
        android:id="@+id/view"
        android:layout_width="416dp"
        android:layout_height="734dp"
        android:background="@color/blue_hall_sg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/laton"
                    android:text="@string/radar"
                    android:textAlignment="center"
                    android:textColor="@color/white_carbon"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <LinearLayout
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@drawable/ic_baseline_radar_24"
                        android:scaleType="centerCrop"
                        tools:ignore="MissingConstraints"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/proximity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/laton"
                        android:text="@string/proximity_2"
                        android:textAlignment="center"
                        android:textColor="@color/white_carbon"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/raio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/laton"
                        android:text="@string/raio"
                        android:textAlignment="center"
                        android:textColor="@color/white_carbon"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:onClick="closeActivity"
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/blue_hall_sgs"
                    android:layout_alignParentStart="true"
                    android:text="@string/close"
                    android:textColor="@color/orange_main"
                    android:shadowColor="@color/black_main"
                    android:fontFamily="@font/arcaderounded"
                    android:shadowDx="5"
                    android:shadowDy="2"
                    android:shadowRadius="4"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>