<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationsActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bckmain"
        android:scaleType="centerCrop"
        tools:ignore="MissingConstraints"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_hall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latob"
                    android:text="@string/notification"
                    android:textAlignment="center"
                    android:textColor="@color/white_carbon"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="60dp"
                    android:elevation="20dp">

                    <ImageView
                        android:layout_width="380dp"
                        android:layout_height="220dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bckne" />

                    <RelativeLayout
                        android:layout_width="380dp"
                        android:layout_height="40dp"
                        android:layout_gravity="bottom"
                        android:background="@color/black_transparenttwo">

                        <TextView
                            android:layout_marginTop="2dp"
                            android:layout_marginLeft="13dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/latob"
                            android:text="@string/exone"
                            android:textColor="@color/white_carbon"
                            android:textSize="15dp" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_marginTop="40dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="60dp"
                    android:elevation="20dp">

                    <ImageView
                        android:layout_width="380dp"
                        android:layout_height="220dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bck" />

                        <RelativeLayout
                            android:layout_width="380dp"
                            android:layout_height="40dp"
                            android:layout_gravity="bottom"
                            android:background="@color/black_transparenttwo">

                            <TextView
                                android:layout_marginTop="5dp"
                                android:layout_marginLeft="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/latob"
                                android:text="@string/extwo"
                                android:textColor="@color/white_carbon"
                                android:textSize="15dp" />
                        </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black_main"
                android:backgroundTintMode="add"
                android:layout_gravity="center">

                <Button
                    android:onClick="voltar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/purple_more"
                    android:text="@string/voltar"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>